app/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: example-rollout
  annotations:
    notifications.argoproj.io/subscribe.on-rollout-step-completed.slack: gep-alerts
    notifications.argoproj.io/subscribe.on-rollout-completed.slack: gep-alerts
    notifications.argoproj.io/subscribe.on-rollout-paused.slack: gep-alerts
    notifications.argoproj.io/subscribe.on-scaling-replica-set.slack: gep-alerts
spec:
  replicas: 8
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.15.6
        ports:
        - containerPort: 80
  minReadySeconds: 30
  revisionHistoryLimit: 3
  strategy:
    canary:
      maxSurge: 25%
      maxUnavailable: 0
      canaryService: example-rollout-canary
      stableService: example-rollout-stable
      trafficRouting:
        nginx:
          stableIngress: example-rollout-ing
      steps:
      - setCanaryScale:
          weight: 25 # add 25% canary pods
      - setWeight: 25 # route 25% traffic to the canary pods
      - pause: { duration: 10s }
      - setCanaryScale:
          replicas: 4
      - pause: { duration: 10s }
      - setCanaryScale:
          weight: 100
