app/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-rollout-stable
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
